--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -2,7 +2,8 @@
 
 <ul>
   <% @tags.each do |tag| %>
-    <%= link_to tag.name + "", tag_path(tag) %>
+    <%= link_to tag.name, tag_path(tag) %>
+    -
     <%= link_to "(delete)", tag_path(tag), method: :delete, data: {confirm: "Delete tag?"} %>
     <br>
   <% end %>
