--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -6,6 +6,6 @@
 
   <% end %>
   <br>
-  <%= link_to "(delete " + @tag.name + "?)", tag_path(tag), method: :delete, data: {confirm: "Delete tag?"} %>
 
+  <p> <%= link_to "<< View All Tags", tags_path %>  </p>
 </ul>
