--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article) do |f| %>
+<%= form_for(@article, html: {multipart: true}) do |f| %>
   <ul>
   <% @article.errors.full_messages.each do |error| %>
     <li><%= error %></li>
@@ -17,6 +17,17 @@
     <%= f.text_field :tag_list %>
 
   </p>
+
+  <p>
+    <% if @article.image.exists? %>
+        <%= f.label :image, "Current image:" %>
+        <%= @article.image :image_file_name %><br/>
+    <% end %>
+    <%= f.label :image, "Attach a New Image" %><br />
+    <%= f.file_field :image %>
+  </p>
+
+
   <p>
     <%= f.submit %>
   </p>
