--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @article.title %></h1>
+<% if @article.image.exists? %>
+  <p><%= image_tag @article.image.url %></p>
+<% end %>
 <p><%= @article.body %></p>
 <p>
   Tags:
@@ -6,6 +9,9 @@
     <%= link_to tag.name, tag_path(tag) %>
   <% end %>
 </p>
+
+
+
 
 <%= link_to "<< Back to Articles List", articles_path %>
 <%= link_to "edit", edit_article_path(@article) %>
